# my_beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
include/beginner_tutorials/: publisher_member_function.hpp  subscriber_member_function.hpp
launch/: publisher_subscriber_services.launch.py
results/: catch2_tests_output.txt  cppcheck.txt  cpplint_header.txt  frames_2024-11-14_19.46.15.gv
results/rosbag_record/: metadata.yaml  rosbag_record_0.db3
src/: publisher_member_function.cpp  subscriber_member_function.cpp
srv/: NewStr.srv
